@@ -6,23 +6,37 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static seedu.ddd.testutil.Assert.assertThrows;
 import static seedu.ddd.testutil.TypicalAddressBook.getTypicalAddressBook;
 import static seedu.ddd.testutil.contact.TypicalContactFields.VALID_TAG_1;
+import static seedu.ddd.testutil.contact.TypicalContactFields.VALID_TAG_2;
 import static seedu.ddd.testutil.contact.TypicalContactFields.VALID_VENDOR_ADDRESS;
 import static seedu.ddd.testutil.contact.TypicalContacts.ALICE;
+import static seedu.ddd.testutil.contact.TypicalContacts.BENSON;
+import static seedu.ddd.testutil.contact.TypicalContacts.CARL;
+import static seedu.ddd.testutil.contact.TypicalContacts.DANIEL;
+import static seedu.ddd.testutil.event.TypicalEvents.VALID_EVENT;
+import static seedu.ddd.testutil.event.TypicalEvents.WEDDING_A;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import seedu.ddd.model.contact.common.Contact;
+import seedu.ddd.model.contact.exceptions.DuplicateContactException;
 import seedu.ddd.model.event.common.Event;
 import seedu.ddd.testutil.contact.ClientBuilder;
 
 public class AddressBookTest {
 
-    private final AddressBook addressBook = new AddressBook();
+    private AddressBook addressBook;
+
+    @BeforeEach
+    public void setUp() {
+        addressBook = new AddressBook();
+    }
 
     @Test
     public void constructor() {
@@ -43,14 +57,14 @@ public class AddressBookTest {
 
     @Test
     public void resetData_withDuplicateContacts_throwsDuplicateContactException() {
-        // TODO: fix this
-        // // Two persons with the same identity fields
-        // Contact editedAlice = new ClientBuilder(ALICE).withAddress(VALID_ADDRESS_BOB).withTags(VALID_TAG_HUSBAND)
-        //         .build();
-        // List<Contact> newContacts = Arrays.asList(ALICE, editedAlice);
-        // AddressBookStub newData = new AddressBookStub(newContacts);
+        // editedAlice has the same name and ID
+        Contact editedAlice = new ClientBuilder(ALICE)
+                .withTags(VALID_TAG_1, VALID_TAG_2)
+                .build();
+        List<Contact> newContacts = List.of(ALICE, editedAlice);
+        AddressBookStub newData = new AddressBookStub(newContacts);
 
-        // assertThrows(DuplicateContactException.class, () -> addressBook.resetData(newData));
+        assertThrows(DuplicateContactException.class, () -> addressBook.resetData(newData));
     }
 
     @Test
@@ -85,6 +99,62 @@ public class AddressBookTest {
     }
 
     @Test
+    public void hasClientId_validClientId_returnsTrue() {
+        addressBook.addContact(ALICE);
+        assertTrue(addressBook.hasClientId(ALICE.getId()));
+    }
+
+    @Test
+    public void hasClientId_invalidClientId_returnsFalse() {
+        // empty addressbook
+        assertFalse(addressBook.hasClientId(ALICE.getId()));
+
+        // wrong client
+        addressBook.addContact(CARL);
+        assertFalse(addressBook.hasClientId(ALICE.getId()));
+
+        // wrong contact type
+        addressBook.addContact(BENSON);
+        assertFalse(addressBook.hasClientId(BENSON.getId()));
+    }
+
+    @Test
+    public void hasVendorId_validVendorId_returnsTrue() {
+        addressBook.addContact(BENSON);
+        assertTrue(addressBook.hasVendorId(BENSON.getId()));
+    }
+
+    @Test
+    public void hasVendorId_invalidVendorId_returnsFalse() {
+        // empty addressbook
+        assertFalse(addressBook.hasVendorId(BENSON.getId()));
+
+        // wrong vendor
+        addressBook.addContact(DANIEL);
+        assertFalse(addressBook.hasVendorId(BENSON.getId()));
+
+        // wrong contact type
+        addressBook.addContact(ALICE);
+        assertFalse(addressBook.hasVendorId(ALICE.getId()));
+    }
+
+    @Test
+    public void hasEvent_validEvent_returnsTrue() {
+        addressBook = getTypicalAddressBook();
+        assertTrue(addressBook.hasEvent(WEDDING_A));
+    }
+
+    @Test
+    public void hasEvent_invalidEvent_returnsFalse() {
+        // empty addressbook
+        assertFalse(addressBook.hasEvent(WEDDING_A));
+
+        addressBook = getTypicalAddressBook();
+        assertTrue(addressBook.hasEvent(WEDDING_A));
+        assertFalse(addressBook.hasEvent(VALID_EVENT));
+    }
+
+    @Test
     public void toStringMethod() {
         String expected = AddressBook.class.getCanonicalName()
                 + "{contacts=" + addressBook.getContactList() + ","
@@ -96,11 +166,11 @@ public class AddressBookTest {
      * A stub ReadOnlyAddressBook whose persons list can violate interface constraints.
      */
     private static class AddressBookStub implements ReadOnlyAddressBook {
-        private final ObservableList<Contact> persons = FXCollections.observableArrayList();
         private final ObservableList<Contact> contacts = FXCollections.observableArrayList();
+        private final ObservableList<Event> events = FXCollections.observableArrayList();
 
-        AddressBookStub(Collection<Contact> persons) {
-            this.persons.setAll(persons);
+        AddressBookStub(Collection<Contact> contacts) {
+            this.contacts.setAll(contacts);
         }
 
         @Override
@@ -110,7 +180,7 @@ public class AddressBookTest {
 
         @Override
         public ObservableList<Event> getEventList() {
-            throw new AssertionError("This method should not be called.");
+            return events;
         }
     }
 
